# myst

./: Cargo.toml  build.rs  package-lock.json  tailwind.config.js  zellij_config.kdl
src/: main.rs
src/hooks/: mod.rs  use_app.rs
src/spotify/: auth.rs  client_config.rs  mod.rs  redirect_uri.rs  server.rs  spotify_client.rs
src/state/: app.rs  app_state.rs  home_state.rs  mod.rs  splash_state.rs  spotify_auth_state.rs
src/ui/components/: button.rs  input.rs  link.rs  link_text.rs  mod.rs  text.rs
src/ui/screens/: home_screen.rs  menu_screen.rs  mod.rs  request_authorization_screen.rs  splash_screen.rs  spotify_config_screen.rs
src/utils/: mod.rs  timer_utils.rs
